--- a/style.css
+++ b/style.css
@@ -54,8 +54,11 @@ h2{
     color:#00587a;
 }
 
+
+
 .listed{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgba(241, 140, 81, 0.856);
 }
 
 section{
@@ -93,4 +96,28 @@ select{
 #combien{
     font-size:15px;
     padding:30px;
+}
+
+/*etape1*/
+
+.btn1{
+    width:200px;
+    height:50px;
+    background: linear-gradient(#5FA6C1, #5FA6C1);
+    box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
+    border:none;
+    outline:none;
+    font: 18px Segoe UI;
+    color: rgb(59, 78, 129);
+    margin:20px;
+}
+/*etape2*/
+
+
+/*etape3*/
+
+   
+/*etape4*/
+.btn4{
+    margin:auto;
 }
